[gd_scene load_steps=5 format=3 uid="uid://ccqf3gldwb5sw"]

[ext_resource type="Script" path="res://scripts/achievements.gd" id="1_achievements"]
[ext_resource type="FontFile" uid="uid://dvxbp285xmtig" path="res://assets/fonts/Knights Quest.ttf" id="2_title_font"]
[ext_resource type="FontFile" uid="uid://brfvbtde0o65k" path="res://assets/fonts/FiraCode-Regular.ttf" id="3_body_font"]
[ext_resource type="Theme" uid="uid://bif1vn82s31vk" path="res://scenes/GUI.tres" id="4_theme"]

[node name="Achievements" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_achievements")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.101961, 0.101961, 0.180392, 1)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 20.0
offset_bottom = 80.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.952941, 0.611765, 0.0705882, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_title_font")
theme_override_font_sizes/font_size = 58
text = "Achievements"
horizontal_alignment = 1

[node name="ProgressLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 90.0
offset_right = 200.0
offset_bottom = 120.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.741176, 0.764706, 0.780392, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("3_body_font")
theme_override_font_sizes/font_size = 20
text = "Unlocked: 0/50"
horizontal_alignment = 1

[node name="FilterButtons" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_top = 130.0
offset_right = 250.0
offset_bottom = 180.0
grow_horizontal = 2
theme_override_constants/separation = 15
alignment = 1

[node name="AllButton" type="Button" parent="FilterButtons"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
theme = ExtResource("4_theme")
text = "All"

[node name="UnlockedButton" type="Button" parent="FilterButtons"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
theme = ExtResource("4_theme")
text = "Unlocked"

[node name="LockedButton" type="Button" parent="FilterButtons"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
theme = ExtResource("4_theme")
text = "Locked"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -600.0
offset_top = -180.0
offset_right = 600.0
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="AchievementsContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = -60.0
offset_right = 160.0
offset_bottom = -10.0
grow_vertical = 0
theme = ExtResource("4_theme")
text = "Back"
